--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.dakusui</groupId>
     <artifactId>valid8j-pcond</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <description>Overhead-less DbC library</description>
     <name>valid8j</name>
     <url>https://github.com/dakusui/valid8j</url>
@@ -24,7 +22,7 @@
         <developerConnection>scm:git:git@github.com:dakusui/${project.name}.git
         </developerConnection>
         <url>http://dakusui.github.io/${project.name}</url>
-        <tag>${project.artifactId}-${project.version}</tag>
+        <tag>valid8j-pcond-1.0.0</tag>
     </scm>
 
     <developers>
@@ -342,7 +340,7 @@
                                     <toc>left</toc>
                                     <icons>font</icons>
                                     <sectanchors>true</sectanchors>
-                                    <idprefix/>
+                                    <idprefix />
                                     <idseparator>-</idseparator>
                                 </attributes>
                             </configuration>
@@ -400,7 +398,7 @@
                             <format>html</format>
                             <format>xml</format>
                         </formats>
-                        <check/>
+                        <check />
                     </configuration>
                 </plugin>
                 <plugin>
