--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.github.dakusui</groupId>
     <artifactId>valid8j</artifactId>
     <packaging>jar</packaging>
-    <version>2.1.2</version>
+    <version>2.1.3-SNAPSHOT</version>
     <description>Java Library Providing Uniformed Programming Experiences across DbC, Value Checking, and Test Assertions</description>
     <name>valid8j</name>
     <url>https://github.com/valid8j/valid8j</url>
@@ -22,7 +22,7 @@
         <developerConnection>scm:git:git@github.com:valid8j/${project.name}.git
         </developerConnection>
         <url>http://valid8j.github.io/${project.name}</url>
-        <tag>valid8j-2.1.2</tag>
+        <tag>${project.artifactId}-${project.version}</tag>
     </scm>
 
     <developers>
