--- a/pom.xml
+++ b/pom.xml
@@ -407,7 +407,6 @@
                     <version>${jacoco-maven-plugin.version}</version>
                     <configuration>
                         <excludes>
-                            <exclude>com/github/valid8j/**/*.class</exclude>
                         </excludes>
                     </configuration>
                     <executions>
@@ -625,7 +624,7 @@
         </repository>
         <site>
             <id>${project.name}</id>
-            <url>https://valid8j.github.io/valid8j</url>
+            <url>file:///${user.dir}/target/site-staging</url>
         </site>
     </distributionManagement>
 
