--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.github.dakusui</groupId>
     <artifactId>valid8j</artifactId>
     <packaging>jar</packaging>
-    <version>2.1.3-SNAPSHOT</version>
+    <version>2.1.2-SNAPSHOT</version>
     <description>Java Library Providing Uniformed Programming Experiences across DbC, Value Checking, and Test Assertions</description>
     <name>valid8j</name>
     <url>https://github.com/valid8j/valid8j</url>
@@ -407,6 +407,7 @@
                     <version>${jacoco-maven-plugin.version}</version>
                     <configuration>
                         <excludes>
+                            <exclude>com/github/valid8j/**/*.class</exclude>
                         </excludes>
                     </configuration>
                     <executions>
@@ -624,7 +625,7 @@
         </repository>
         <site>
             <id>${project.name}</id>
-            <url>file:///${user.dir}/target/site-staging</url>
+            <url>https://valid8j.github.io/valid8j</url>
         </site>
     </distributionManagement>
 
